shluflix/middleware-rate-limit-shluflix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-shluflix
  namespace: shluflix
spec:
  # Intended to be suitable for public, casual, streaming use
  # Non-static pages which might incur lookups
  rateLimit:
    average: 6  # 6 request every ..
    period: 1m # 
    burst: 20   # allow burst up to 20
