shluflix/middleware-redirectregex-shluflix-deprecated.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectregex-shluflix-is-deprecated
  namespace: shluflix
spec:
  redirectRegex:
    regex: ^.*
    replacement: https://shluflix-is-deprecated.elfhosted.com
