shluflix/middleware-redirectregex-shluflix-stream-deprecated.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectregex-shluflix-stream-is-deprecated
  namespace: shluflix
spec:
  redirectRegex:
    regex: ^.*
    replacement: https://deprecations.elfhosted.com/shluflix-is-deprecated.json
