shluflix/ingressroute-shluflix.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shluflix.${dns_domain}
  namespace: shluflix
spec:
  routes:
    # "stream" endpoint is the one which invokes database access, and thus needs tighter rate-limiting
    - match: Host(`shluflix.${dns_domain}`)
      kind: Rule
      services:
        - kind: Service
          name: deprecations
          namespace: deprecations
          port: 8080
      middlewares:  
        - name: headers-add-cors-for-stremio
          namespace: traefik
        - name: redirectregex-shluflix-is-deprecated
    - match: Host(`shluflix.${dns_domain}`) && PathPrefix(`/stream`)
      kind: Rule
      services:
        - kind: Service
          name: deprecations
          namespace: deprecations
          port: 8080
      middlewares:  
        - name: headers-add-cors-for-stremio
          namespace: traefik          
        - name: redirectregex-shluflix-stream-is-deprecated
